--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	@font-face {
+		font-family: 'Ubuntu';
+		src: url('./assets/fonts/ubuntu/Ubuntu-Regular.ttf') format('truetype');
+		font-weight: 400;
+		font-style: normal;
+	}
+}
