--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,17 @@
 @tailwind utilities;
 
 @layer base {
-	@font-face {
-		font-family: 'Ubuntu';
-		src: url('./assets/fonts/ubuntu/Ubuntu-Regular.ttf') format('truetype');
-		font-weight: 400;
-		font-style: normal;
-	}
+  @font-face {
+    font-family: 'Georama';
+    src: url('./assets/fonts/georama/Georama-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'Georama';
+    src: url('./assets/fonts/georama/Georama-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+  }
 }
